# se-tooling-ci-common

./: README.md
.github/workflows/: go-build.yaml  go-run-tests.yaml  run-tests-python.yaml
.github/workflows/python/mandatory/: pylintrc
.github/workflows/python/optional/: .readthedocs.yaml
common/github_workflows/: gchr-build-and-publish.yaml  ghcr-publish.yaml  snap-build-and-upload.yaml
go/: Makefile  go.mod
go/cmd/: main.go  main_test.go
go/github_workflows/: build.yaml  run-tests.yaml
go/pkg/: helper.go  helper_test.go
python/: .readthedocs.yaml  pylintrc  pyproject.toml  test-requirements.txt  tox.ini  yamllintrc
python/github_workflows/: build.yaml  gchr-build-and-publish.yaml  python-build.yaml  run-tests.yaml  snap-build-and-upload.yaml
python/mandatory/: pylintrc  pyproject.toml  test-requirements.txt  tox.ini
python/optional/: yamllintrc
