# This is a templated file and must be kept up-to-date with the original
# from upstream at https://github.com/canonical/se-tooling-ci-common.
[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

# Used if no untracked files and current commit is tagged.
template = "{tag}"

# Used if there are no untracked files, and current commit is not tagged.
dev_template = "{tag}.post{ccount}"

# Used if untracked files exist or uncommitted changes have been made.
dirty_template = "{tag}.post{ccount}+dirty"

[project]
name = <PROJECT NAME GOES HERE>
description = <PROJECT DESCRIPTION GOES HERE>
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
<PROJECT NAME GOES HERE> = <PROJECT NAME GOES HERE>".cli:main"
